# MeshProcessing

./: .gitignore  .gitmodules  .polyscope.ini  CMakeLists.txt  README.md  imgui.ini
assets/: Kitten_Tet.mesh  block_1_hex.Qhex  bunny_hex_opt.vtu  polycube_result_1.0_Hex.mesh  sample_volume_mesh.ovm
src/: main.cpp
src/core/: mp_pch.h
src/io/: mp_io_manager.cc  mp_io_manager.h  mp_mesh_io.cc  mp_mesh_io.h  mp_obj_io.cc  mp_obj_io.h  mp_ovm_io.cc  mp_ovm_io.h  mp_qhex_io.cc  mp_qhex_io.h  mp_vtk_io.cc  mp_vtk_io.h
src/mesh/: mp_hexahedral_mesh.cc  mp_hexahedral_mesh.h  mp_mesh_base.h  mp_mesh_creator.h  mp_test_hmesh.h  mp_tetrahedral_mesh.cc  mp_tetrahedral_mesh.h
src/mesh/HMesh/Geometry/: Circle.h  Hyperbolic.H  HyperbolicCircle.h  Line2D.h  Plane.h  Point.h  Point2.H  quat.h
src/mesh/HMesh/HexMesh/: basehmesh.h  face.h  halfedge.h  halfface.h  hexmesheditor.h  hiterators.h
src/mesh/hMesh/: mp_custom_hmesh.h  mp_custom_hmesh.inl
src/mesh/hMesh/HMeshCore/Geometry/: Circle.h  Hyperbolic.h  Line2D.h  Point.h  Point2.h  quat.h
src/mesh/hMesh/HMeshCore/HexMesh/: basehmesh.h  edge.h  hedge.h  hex.h  hexmesheditor.h  hiterators.h  hvertex.h  vertex.h
src/mesh/hMesh/HMeshCore/Parser/: parser.h
src/utils/: mp_utils.cpp  mp_utils.h
